# mcp-chess

./: pyproject.toml
src/chess/: chess_api.py  server.py
